# mcp-orchestrator-by-k8s

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.example.yaml  opencode.jsonc  rust-toolchain.toml  test-config.yaml  test-grpc.sh
.devcontainer/: devcontainer.json
.github/workflows/: prepare-release.yml  release.yml
.specify/memory/: constitution.md
crates/axum-qs/: Cargo.toml
crates/axum-qs/src/: lib.rs
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/backend/src/kube/: mod.rs  pod_manager.rs  pod_template.rs
crates/backend/src/passmcp/: mod.rs  pass_mcp_errors.rs  pass_mcp_server.rs  pass_mcp_session_manager.rs  pass_mcp_session_transport.rs  sample.rs
crates/backend/src/route/: fallback.rs  index.rs  mcp.rs  mod.rs
crates/backend/src/route/api/: mod.rs
crates/backend/src/route/api/mcp/: get.rs  mod.rs  post.rs
crates/backend/src/service/: mcp_pod_service.rs  mod.rs
crates/backend/src/state/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: consts.rs  failure.rs  lib.rs  state.rs
crates/common/src/param/: api_mcp_id_param.rs  label_param.rs  mod.rs
crates/common/src/passmcp/: mod.rs
crates/common/src/request/: create_mcp_pod_request.rs  mod.rs
crates/common/src/response/: mcp_pod_response.rs  mod.rs
crates/frontend/: index.html
crates/mcp-orchestrator/: Cargo.toml  build.rs
crates/mcp-orchestrator-front/: Cargo.toml  Trunk.toml  build.rs  index.html  styles.css
crates/mcp-orchestrator-front/src/: app.rs  lib.rs  main.rs  routes.rs  styles.css
crates/mcp-orchestrator-front/src/api/: auth.rs  authorizations.rs  client.rs  mod.rs  namespaces.rs  resource_limits.rs  secrets.rs  templates.rs
crates/mcp-orchestrator-front/src/components/: confirm_dialog.rs  copy_config_dialog.rs  error_message.rs  form_field.rs  layout.rs  loading.rs  mod.rs  namespace_selector.rs  navbar.rs  resource_card.rs  resource_list.rs  sidebar.rs  user_menu.rs
crates/mcp-orchestrator-front/src/models/: authorization.rs  mod.rs  namespace.rs  resource_limit.rs  secret.rs  state.rs  template.rs
crates/mcp-orchestrator-front/src/pages/: home.rs  mod.rs  oauth_callback.rs
crates/mcp-orchestrator-front/src/pages/authorizations/: create.rs  detail.rs  list.rs  mod.rs
crates/mcp-orchestrator-front/src/pages/namespaces/: create.rs  detail.rs  list.rs  mod.rs
crates/mcp-orchestrator-front/src/pages/resource_limits/: create.rs  detail.rs  list.rs  mod.rs
crates/mcp-orchestrator-front/src/pages/secrets/: create.rs  detail.rs  list.rs  mod.rs  update.rs
crates/mcp-orchestrator-front/src/pages/templates/: detail.rs  form.rs  list.rs  mod.rs
crates/mcp-orchestrator-front/src/utils/: format.rs  mod.rs  validation.rs
crates/mcp-orchestrator/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/mcp-orchestrator/src/assets/: mod.rs
crates/mcp-orchestrator/src/grpc/: mcp_authorization.rs  mcp_generate_token.rs  mcp_server.rs  mcp_template.rs  mod.rs  namespace.rs  resource_limit.rs  secret.rs  utils.rs
crates/mcp-orchestrator/src/http/: fallback.rs  index.rs  mod.rs
crates/mcp-orchestrator/src/http/mcp/: any_namespace_name.rs  delete_namespace_name.rs  get_namespace_name.rs  mod.rs  post_namespace_name.rs  utils.rs
crates/mcp-orchestrator/src/http/oauth/: mod.rs
crates/mcp-orchestrator/src/http/statics/: get.rs  mod.rs
crates/mcp-orchestrator/src/http/well_known/: mod.rs
crates/mcp-orchestrator/src/podmcp/: consts.rs  errors.rs  manager.rs  mod.rs  proxy.rs  transport.rs
crates/mcp-orchestrator/src/service/: interval_orphan_sesssion.rs  mod.rs  util.rs
crates/mcp-orchestrator/src/storage/: annotations.rs  finalizer.rs  label_query.rs  labels.rs  lease_manager.rs  mcp_server_store.rs  mcp_template_store.rs  mod.rs  namespace_store.rs  resource_limit_store.rs  resource_type.rs  resource_uname.rs  scheduling_validation.rs  secret_store.rs  store.rs  store_authorization.rs  store_mcp_template.rs  store_namespace.rs  store_resource_limit.rs  store_secret.rs  util_delete.rs  util_list.rs  util_name.rs  utils.rs
crates/mcp-orchestrator/tests/: dependency_tests.rs
crates/oidc-auth/: Cargo.toml
crates/oidc-auth/src/: claim.rs  config.rs  error.rs  extractor.rs  jwk_to_key.rs  jwks.rs  layer.rs  lib.rs  manager.rs  manager_authorize.rs  manager_callback.rs  manager_oauth_authorization_server.rs  manager_protected_resource.rs  manager_register.rs  middleware.rs
crates/proto/: Cargo.toml  build.rs
crates/proto-web/: Cargo.toml  build.rs
crates/proto-web/src/: lib.rs
crates/proto/src/: lib.rs
protobuf/: DEPENDENCY.md  mcp_server.proto  mcp_template.proto  resource_limit.proto  secret.proto
spec/: README.md  authorization.proto  common.proto  mcp_server.proto  mcp_template.proto  namespace.proto  resource_limit.proto  secret.proto  service.proto
specs/001-grpc-web-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-grpc-web-ui/checklists/: requirements.md
specs/002-resource-limit-scheduling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-resource-limit-scheduling/checklists/: requirements.md
specs/002-resource-limit-scheduling/contracts/: resource_limit.proto
