[workspace]
resolver = "3"
members = ["crates/frontend", "crates/proto", "crates/mcp-orchestrator"]

[workspace.package]
version = "0.1.3"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8", features = ["json", "macros"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
json-patch = { version = "4" }

prost = "0.14"
prost-types = "0.14"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

chrono = { version = "0.4", features = ["serde", "clock"] }
humantime = { version = "2" }

bytes = "1"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
include_dir = "0.7"
anyhow = "1"
base64 = "0.22"
regex = { version = "1" }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
lazy_static = "1"
mime_guess = "2"

rmcp = { version = "0.8", features = [
    "transport-async-rw",
    "transport-streamable-http-server",
    "auth",
    "client",
    "server",
    "reqwest",
] }

kube = { version = "2.0.1", features = [
    "runtime",
    "derive",
    "client",
    "ws",
    "jsonpatch",
] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = { version = "1" }

figment = { version = "0.10", features = ["json", "env", "yaml"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

thiserror = { version = "2" }

tonic = { version = "0.14" }
tonic-web = { version = "0.14" }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
