[workspace]
resolver = "3"
members = [
    "crates/mcp-orchestrator-front",
    "crates/proto",
    "crates/proto-web",
    "crates/mcp-orchestrator",
    "crates/oidc-auth",
    "crates/axum-qs",
]

[workspace.package]
version = "0.2.8"
edition = "2024"

[workspace.dependencies]
http = { version = "1" }
axum = { version = "0.8", features = ["json", "macros"] }
axum-extra = { version = "0.10", features = [
    "typed-header",
    "cookie",
    "cookie-private",
] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tower-layer = { version = "0.3" }
http-body = { version = "1" }
http-body-util = { version = "0.1" }
sse-stream = "0.2"

jsonwebtoken = { version = "10", features = ["rust_crypto"] }
openidconnect = { version = "4" }

argon2 = { version = "0.5" }
rsa = "0.9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = "0.13"
p384 = "0.13"
pkcs8 = { version = "0.10", features = ["pem"] }
sec1 = "0.7"
rand = "0.8"
rand_chacha = { version = "0.3" }

pin-project-lite = "0.2"

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7" }
futures = { version = "0.3" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_qs = { version = "0.15" }
json-patch = { version = "4" }

tonic = { version = "0.14", features = ["server"] }
tonic-web = { version = "0.14" }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tonic-reflection = "0.14"
prost = { version = "0.14" }
prost-wkt = { version = "0.7" }
prost-wkt-types = { version = "0.7" }
prost-wkt-build = { version = "0.7" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

chrono = { version = "0.4", features = ["serde", "clock"] }
time = { version = "0.3" }
humantime = { version = "2" }
humantime-serde = { version = "1" }

bytes = "1"
include_dir = "0.7"
anyhow = "1"
base64 = "0.22"
regex = { version = "1" }
uuid = { version = "1", features = ["v4"] }
lazy_static = "1"
mime_guess = "2"

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }

rmcp = { version = "0.8", features = [
    "transport-async-rw",
    "transport-streamable-http-server",
    "auth",
    "client",
    "server",
    "reqwest",
] }

kube = { version = "2.0.1", features = [
    "runtime",
    "derive",
    "client",
    "ws",
    "jsonpatch",
] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = { version = "1" }

figment = { version = "0.10", features = ["json", "env", "yaml"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

thiserror = { version = "2" }

# Transitive dependency 버전 강제 (직접 사용하지 않더라도 명시)
# 이렇게 하면 Cargo resolver가 이 버전을 우선 선택함
