[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
lazy_static = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
uuid = { workspace = true }
mime_guess = { workspace = true }
include_dir = { workspace = true }

common = { path = "../common" }

rmcp = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
