[package]
name = "mcp-orchestrator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mcp-orchestrator"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = "1"

tonic = { workspace = true }
tonic-web = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }

chrono = { workspace = true }
humantime = { workspace = true }

regex = { workspace = true }
lazy_static = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

kube = { workspace = true }
k8s-openapi = { workspace = true }

figment = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }

proto = { path = "../proto" }

uuid = { workspace = true }

[dev-dependencies]
rstest = "0.22"
tokio-test = "0.4"
