[package]
name = "oidc-auth"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_qs = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
openidconnect = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
time = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
urlencoding = "2"
rsa = { workspace = true }
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
pkcs8 = { workspace = true }
sec1 = { workspace = true }
