[package]
name = "proto-web"
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[package.metadata.cargo-machete]
ignored = [
    "prost",
    "prost-wkt",
    "prost-wkt-types",
    "tonic",
    "tonic-prost",
    "serde",
]

[dependencies]
prost = { workspace = true }
prost-wkt = { workspace = true }
prost-wkt-types = { workspace = true }
serde = { workspace = true }

[build-dependencies]
prost-build = "0.14"
prost-wkt-build = { workspace = true }
