[package]
name = "proto"
edition.workspace = true
version.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

serde = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
